fix alignment (center vertical now) and add gap between elements

--- a/src/app/Components/SkillGroup/SkillGroup.module.scss
+++ b/src/app/Components/SkillGroup/SkillGroup.module.scss
@@ -38,4 +38,7 @@
 }
 .content {
   position: relative;
+  display: inline-flex;
+  align-items: center;
+  gap: 0.2rem;
 }
